# nlohmann-json-validator

./: .gitignore  .gitmodules  CMakeLists.txt
example/: CMakeLists.txt  main.cpp
example/data/: user-failure.jsonc  user-success.jsonc
include/nlohmann/: json-validator.hpp
tests/: CMakeLists.txt
tests/src/: unit-json-existence.cpp  unit-json-validator.cpp  unit.cpp
